navigation closes on user click

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
           BARCODE CHANNEL <small>></small>
         <% end %>
         <div class="nav-collapse">
-          <ul class="nav">
+          <ul id='navigation-bar' class="nav">
             <li class='active'><%= link_to "News", posts_path %></li>
             <li><%= link_to "Listen", songs_path %></li>
             <li><%= link_to "Images", '#' %></li>
