Styled mission less aggressively

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -41,7 +41,7 @@ a.brand {
 }
 
 #mission {
-  color:white;
+  color:#CCC;
   font-style:italic;
   margin-bottom:10px;
 }
@@ -94,6 +94,7 @@ footer {
   padding: 0 10px 5px 10px;
 
   > h2 {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: white;
     border-bottom: 1px solid #666;
     margin-bottom: 10px;
