Use century for header

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -38,6 +38,8 @@ a.brand {
   font-size:56px;
   line-height:55px;
   margin-bottom:10px;
+  font-family:'Century Gothic',futura,'URW Gothic L',Verdana,sans-serif;
+  
 }
 
 #mission {
