Grey text is less eye straining

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -94,7 +94,7 @@ footer {
 }
 #main-content {
   background-color: #3E3D42;
-  color:white;
+  color: #DDD;
   padding: 0 10px 5px 10px;
 
   > h2 {
