--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -95,18 +95,18 @@ footer {
 #main-content {
   background-color: #3E3D42;
   color: #DDD;
-  padding: 0 10px 5px 10px;
+  padding: 5px 10px;
 
   > h2 {
     font-family: Webdings, sans-serif;
-    color: white;
-    border-bottom: 1px solid #888;
+    color: #AAA;
     padding-top: 5px;
-    margin-bottom: 10px;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
   }
 
   h3 {
-    font-weight:normal;
     margin-bottom: 2px;
   }
 
