--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,8 +63,12 @@
     <div id="main-content" data-pjax-container>
       <%= yield %>
     </div>
-    <footer id="side-nav">
-      <h2>Other pages</h2>
+    <footer>
+      <h4>About Us</h4>
+      <p>We are Barcode Channel. We write songs around angular guitar lines and programmed beats, drawing influence from artists such as Radiohead, Foals, Bloc Party and Interpol.</p>
+      <p>The three of us work in an entirely DIY fashion, hidden away in our makeshift studio, merging our love of post punk and indie rock guitars with electronic production and beats. </p>
+
+      <h4>Other pages</h4>
       <ul id='ext-links'>
         <%= link_to '#' do %><li><span class='logo'><%= image_tag 'soundcloud.png' %></span><span>Soundcloud</span></li><% end %>
         <%= link_to '#' do %><li><span class='logo'><%= image_tag 'facebook.png' %></span><span>Facebook</span></li><% end %>
