--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -65,7 +65,7 @@ footer {
   }
 
   ul#ext-links {
-    margin-left: 0;
+    margin: 0;
     a li {
       color: #3E3D41;
       list-style:none;
@@ -104,7 +104,7 @@ footer {
 #main-content {
   background-color: #3E3D42;
   color: #DDD;
-  padding: 5px 10px 15px 10px;
+  padding: 5px 10px 20px 10px;
 
   > h2 {
     font-family: Webdings, sans-serif;
@@ -140,6 +140,34 @@ footer {
       p {
         margin-bottom: 5px;
       }
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 980px) { 
+  div#about-box {
+    width: 60%;
+  }
+}
+
+@media (min-width: 768px) { 
+  footer {
+    overflow:hidden;
+    p {
+      padding: 0 1em;
+    }
+  }
+  #about-box {
+    float:left;
+    width: 70%;
+  }
+  #links-box {
+    float:right;
+    width: 30%;
+    min-width: 275px;
+
+    #ext-links {
+      padding: 0 1em;
     }
   }
 }
