--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <a class="btn btn-navbar" data-toggle="collapse" data-remote data-target=".nav-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -49,8 +49,8 @@
             <li class='active'><%= link_to "News", posts_path %></li>
             <li><%= link_to "Listen", songs_path %></li>
             <li><%= link_to "Images", '#' %></li>
-            <li><%= link_to "About", '#' %></li>
-            <li><%= link_to "Links", '#ext-links' %></li>
+            <li><%= link_to "About", '#about-box' %></li>
+            <li><%= link_to "Links", '#links-box' %></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
