Change main content padding on large screens

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -170,4 +170,9 @@ footer {
       padding: 0 1em;
     }
   }
+  #main-content {
+    background-color: #3E3D42;
+    color: #DDD;
+    padding: 10px 15px 20px 15px;
+  }
 }
