Fix highlight of anchor links

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -125,6 +125,10 @@ footer {
   }
 }
 
+#about-box, #links-box {
+  background-color: $bc-green;
+}
+
 #post-list {
   list-style-type:none;
   margin-left: 0;
