Add image uploading (but not finished)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
           <ul id='navigation-bar' class="nav">
             <li class='active'><%= link_to "News", posts_path %></li>
             <li><%= link_to "Listen", songs_path %></li>
-            <li><%= link_to "Images", '#' %></li>
+            <li><%= link_to "Images", images_path %></li>
             <li><%= link_to "About", '#about-box' %></li>
             <li><%= link_to "Links", '#links-box' %></li>
           </ul>
