--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,18 +1,7 @@
-<h1>Listing images</h1>
-
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @images.each do |image| %>
-  <tr>
-    <td><%= link_to image_tag(image.image.url(:small)), image %></td>
-    <td><%= link_to 'Show', image %></td>
-  </tr>
-<% end %>
-</table>
+<ul id='image-list'>
+  <% @images.each do |image| %>
+    <li><%= link_to image_tag(image.image.url(:small)), image %></li>
+  <% end %>
+</ul>
 
 <br />
