Fix footer links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,10 +71,10 @@
       <div id='links-box'>
         <h4>Other pages</h4>
         <ul id='ext-links'>
-          <%= link_to '#' do %><li><span class='logo'><%= image_tag 'soundcloud.png' %></span><span>Soundcloud</span></li><% end %>
-          <%= link_to '#' do %><li><span class='logo'><%= image_tag 'facebook.png' %></span><span>Facebook</span></li><% end %>
+          <%= link_to 'https://soundcloud.com/barcode-channel' do %><li><span class='logo'><%= image_tag 'soundcloud.png' %></span><span>Soundcloud</span></li><% end %>
+          <%= link_to 'http://www.facebook.com/pages/Barcode-Channel/126967277330061' do %><li><span class='logo'><%= image_tag 'facebook.png' %></span><span>Facebook</span></li><% end %>
           <%= link_to 'http://barcodechannel.bandcamp.com' do %><li><span class='logo'><%= image_tag 'bandcamp.png' %></span><span>Bandcamp</span></li><% end %>
-          <%= link_to '#' do %><li><span class='logo'><%= image_tag 'youtube.png' %></span><span>YouTube</span></li><% end %>
+          <%= link_to 'http://www.youtube.com/user/BarcodeChannel?feature=watch' do %><li><span class='logo'><%= image_tag 'youtube.png' %></span><span>YouTube</span></li><% end %>
         </ul>
       </div>
 
