--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -129,7 +129,7 @@ footer {
   }
 }
 
-#about-box, #links-box {
+#the-left, #links-box {
   background-color: $bc-green;
 }
 
@@ -153,7 +153,7 @@ footer {
 }
 
 @media (min-width: 768px) and (max-width: 980px) { 
-  div#about-box {
+  div#the-left {
     width: 60%;
   }
 }
@@ -165,7 +165,7 @@ footer {
       padding: 0 1em;
     }
   }
-  #about-box {
+  #the-left {
     float:left;
     width: 70%;
   }
