--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -151,6 +151,19 @@ footer {
   }
 }
 
+.button {
+  border: 0;
+  border-radius: 5px;
+  background-color: #FF7D1B;
+  padding: 5px 10px;
+  color: #FFF;
+  font-weight: bold;
+}
+
+#mail-signup .email {
+  margin-top: 10px;
+}
+
 @media (min-width: 768px) and (max-width: 980px) { 
   div#the-left {
     width: 60%;
