--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,9 +80,32 @@
       <div id='the-left'>
         <div id='about-box'>
           <h4>About Us</h4>
-          <p>Hi there. We are Barcode Channel, a 3-piece from Cambridge fusing straight up post-punk like LCD Soundsystem and Bloc Party with more electronic influences like SBTRKT and Radiohead's Kid A </p>
-          <p>We work by combining angular guitars with a laptop for beats, samples and synths, working strictly DIY and taking on all the production and recording duties ourselves. While not being the easiest path (and having quite a learning curve!), it's key to shaping our sound. Coupled with drawing influences from a wide range of genres (from Rustie to Wu-Tang), we hope to create something a little different.</p>
+          <p>Hi there. We are Barcode Channel, a 3-piece from Cambridge fusing straight up post-punk like LCD Soundsystem and Bloc Party with more electronic influences like SBTRKT and Radiohead's Kid A.</p>
+          <p>We work by combining angular guitars with a laptop for beats, samples and synths, working strictly DIY and taking on all the production and recording duties ourselves. While not being the easiest path, it's key to shaping our sound. Coupled with drawing influences from a wide range of genres (from Rustie to Wu-Tang), we hope to create something a little different.</p>
         </div>
+
+        <div id="mail-signup">
+          <!-- Begin MailChimp Signup Form -->
+          <div id="mc_embed_signup">
+            <form action="http://barcodechannel.us8.list-manage.com/subscribe/post?u=9b8b5b567e687e0144465dd62&amp;id=7dad8500e0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <h4 for="mce-EMAIL">Stay up to date with Barcode Channel</h4>
+              <p>
+                We won't email you often, but when we do, we promise it will be interesting.
+              </p>
+              <p>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+              </p>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;"><input type="text" name="b_9b8b5b567e687e0144465dd62_7dad8500e0" value=""></div>
+              <p>
+                <input type="submit" value="Subscribe" name="subscribe" class="button" id="mc-embedded-subscribe">
+              </p>
+            </form>
+          </div>
+
+          <!--End mc_embed_signup-->
+        </div>
+
         <div id='contact-box'>
           <h4>Contact</h4>
           <p>Want to get hold of us? <a href="mailto:barcodechannel.com">barcodechannel@gmail.com</a></p>
